[package]
name = "mxidwc"
description = "Matrix ID WildCard Parser"
authors = ["Slavi Pantaleev <slavi@devture.com>"]
repository = "https://github.com/etkecc/rust-mxidwc"
license = "LGPL-3.0"
readme = "README.md"
keywords = ["matrix"]
exclude = [".editorconfig", "justfile"]
version = "1.0.0"
edition = "2021"

[lib]
name = "mxidwc"
path = "src/lib.rs"

[dependencies]
regex = "1.10.*"

[profile.release]
strip = true
opt-level = "z"
lto = true
